[package]
name = "rss2pan"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "3.2", features = ["cargo"] }
chrono = "0.4"
dirs = "4.0.0"
url = "2.2.2"
rusqlite = { version = "0.28.0", features = ["bundled"] }
rss = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
futures = "*"
gcookie = "0.0.3"
log = "0.4.0"
env_logger = "0.9.0"
once_cell = "1.15.0"

[profile.release]
lto = true
strip = true
opt-level = "z"